--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
 	},
 	"bin": ["bin/phint"],
 	"require": {
-		"nikic/php-parser": "~1.2",
-		"symfony/finder": "~2.6"
+		"nikic/php-parser": "*",
+		"symfony/finder": "~2.6|~3.0"
 	}
 }
