--- a/.travis.yml
+++ b/.travis.yml
@@ -11,14 +11,11 @@ php:
   - 5.5
   - 5.6
   - 7.0
-  - hhvm
-
-matrix:
-  allow_failures:
-    - php: 7.0
+  - 7.1
+  - 7.2
 
 install:
-  - composer install --dev --no-interaction
+  - composer install --no-interaction
 
 script:
   - phpunit
