--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,8 @@
 	"require": {
 		"nikic/php-parser": "*",
 		"symfony/finder": "~2.6|~3.0"
+	},
+	"require-dev": {
+		"phpunit/phpunit": ">=4.8, <6"
 	}
 }
